versioned_docs/version-5.0.0/ueber.md
---
id: about
title: Über
---

## Über dieses Handbuch

Das ist ein Handbuch. Es gibt viele Handbücher, aber dieses ist [unseres](partcipants). Es ist kein Tutorial und auch keine technische Dokumentation, es ist nicht vollständig und vermutlich auch nicht immer hundertprozentig aktuell. Aber wir lieben es – und du hoffentlich auch.

Wie Ultraschall selbst ist auch dieses Handbuch ein Community-Projekt unter offener Lizenz. Es soll dir den Einstieg erleichtern, dir ein Nachschlagewerk für einzelne Funktionen sein und dir die Ecken in Ultraschall zeigen, die du vielleicht noch nicht (so gut) kennst. Wir haben versucht, vor allem die typischen, einfachen Workflows für den Einstieg zu erklären – aber auch fortgeschrittene und komplexere Projekte in zusätzlichen Themenblöcken oder eigenen Kapiteln abzuhandeln.

Das Schöne an diesem digitalen Buch: Unvollständige und imperfekte Dinge laden zum Mitmachen ein. Falls du also einen Fehler findest, dir Ergänzungen wünscht oder dir etwas unklar ist, melde dich bei [uns](partcipants) – oder du forkst das [Ultraschall-Handbuch-Projekt auf Github](https://github.com/Ultraschall/ultraschall-manual), machst einen Vorschlag und veröffentlichst ihn als Pull Request. Mit Hilfe der Community aus Anwenderinnen und Anwendern wollen wir hier in Zukunft noch mehr Themen und Kapitel hinzufügen, ausführlich auf neue Ultraschall-Versionen eingehen und noch mehr Abschnitte bebildern oder mit Videos versehen. Es gibt genug zu tun, pack gerne mit an!
